# django_furniture_market

./: .gitignore  manage.py  pyproject.toml
carts/: admin.py  models.py  urls.py  utils.py  views.py
carts/migrations/: 0001_initial.py
carts/templates/carts/includes/: included_cart.html
django_market/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/goods/: prod.json  products.json
goods/: admin.py  models.py  urls.py  utils.py  views.py
goods/migrations/: 0001_initial.py  0002_alter_products_options.py
goods/templates/goods/: catalog.html  product.html
goods/templatetags/: goods_tags.py
main/: urls.py  views.py
main/templates/main/: about.html  base.html  index.html
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_rename_delivery_adress_order_delivery_address.py
orders/templates/orders/: create_order.html
templates/: base.html
templates/includes/: cart_button.html  notifications.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_phone_number.py
users/templates/users/: login.html  profile.html  registration.html
