[tool.poetry]
name = "django-market"
version = "0.1.0"
description = ""
authors = ["arty <av.yaz@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
pillow = "^10.2.0"
ipython = "^8.20.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.2.0"
psycopg = "^3.1.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
